// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step 1: cirno init 1`] = `
stdout: |2
   SUCCESS  Cirno project initialized at /data.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries: []
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances: []
  - type: directory
    name: instances
    entries: []
  - type: directory
    name: temp
    entries: []

`;

exports[`step 2: cirno import /fixtures/foo 1`] = `
stdout: |2
   SUCCESS  Successfully imported instance cd5fbb72-8243-5ccf-b8ca-ceee993585f7.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 3: cirno import /fixtures/bar 1`] = `
stdout: |2
   SUCCESS  Successfully imported instance 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          created: '<timestamp>'
          updated: '<timestamp>'
        - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
          name: bar
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
                  - type: file
                    name: '@types-emscripten-npm-1.39.13-baf7427522-99c314418b.zip'
                  - type: file
                    name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-e327aaf73f.zip'
                  - type: file
                    name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-11e12724d9.zip'
                  - type: file
                    name: tslib-npm-2.6.3-0fd136b3be-2598aef53d.zip
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;

exports[`step 4: cirno import /fixtures/baz 1`] = `
stdout: |2
   SUCCESS  Successfully imported instance b6394418-863d-5b5f-871f-dde7e8292e29.
stderr: ''
code: 0
signal: null
entries:
  - type: directory
    name: .yarn
    entries:
      - type: directory
        name: cache
        entries: []
      - type: directory
        name: releases
        entries:
          - type: file
            name: yarn-4.2.2.cjs
          - type: file
            name: yarn-4.3.1.cjs
  - type: file
    name: cirno.yml
    content: |
      version: '1.0'
      instances:
        - id: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
          name: foo
          created: '<timestamp>'
          updated: '<timestamp>'
        - id: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
          name: bar
          created: '<timestamp>'
          updated: '<timestamp>'
        - id: b6394418-863d-5b5f-871f-dde7e8292e29
          name: baz
          created: '<timestamp>'
          updated: '<timestamp>'
  - type: directory
    name: instances
    entries:
      - type: directory
        name: 5ab7bff9-d000-5c3b-83ac-4c3c4296ee19
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
                  - type: file
                    name: '@types-emscripten-npm-1.39.13-baf7427522-99c314418b.zip'
                  - type: file
                    name: '@yarnpkg-fslib-npm-3.1.0-821f4faf89-e327aaf73f.zip'
                  - type: file
                    name: '@yarnpkg-libzip-npm-3.1.0-73edb40bfc-11e12724d9.zip'
                  - type: file
                    name: tslib-npm-2.6.3-0fd136b3be-2598aef53d.zip
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: b6394418-863d-5b5f-871f-dde7e8292e29
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
                  - type: file
                    name: '@yarnpkg-parsers-npm-3.0.2-c5e3ccc563-a0c340e131.zip'
                  - type: file
                    name: argparse-npm-1.0.10-528934e59d-b2972c5c23.zip
                  - type: file
                    name: esprima-npm-4.0.1-1084e98778-ad4bab9ead.zip
                  - type: file
                    name: js-yaml-npm-3.14.1-b968c6095e-6746baaaea.zip
                  - type: file
                    name: sprintf-js-npm-1.0.3-73f0a322fa-ecadcfe4c7.zip
                  - type: file
                    name: tslib-npm-2.6.3-0fd136b3be-2598aef53d.zip
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
      - type: directory
        name: cd5fbb72-8243-5ccf-b8ca-ceee993585f7
        entries:
          - type: file
            name: .pnp.cjs
          - type: directory
            name: .yarn
            entries:
              - type: directory
                name: cache
                entries:
                  - type: file
                    name: .gitignore
              - type: file
                name: install-state.gz
          - type: file
            name: .yarnrc.yml
            content: |
              enableGlobalCache: false

              enableTips: false

              nodeLinker: pnp
          - type: file
            name: package.json
          - type: file
            name: yarn.lock
  - type: directory
    name: temp
    entries: []

`;
